# crossfilter

./: .gitignore  CMakeLists.txt  README.md  run
benchmark/: CMakeLists.txt  benchmark1.cpp  thread.cpp
benchmark/benchBin/: benchmark1
demo/: demo1  demo1.cpp
docs/: Doxyfile
docs/html/: annotated.html  classes.html  crossfilter_8hpp_source.html  dimension_8hpp_source.html  dir_1ce12a969299dbe29f3c2a77345014ad.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  group_8hpp_source.html  hierarchy.html  index.html  menudata.js  structCrossFilter-members.html  structCrossFilter.html  structDimension-members.html  structDimension.html  structGroup-members.html  structGroup.html  structextract__value-members.html  structextract__value.html
include/: crossfilter.hpp
include/detail/: bitarray.hpp  crossfilter.hpp  crossfilter_impl.hpp  dimension.hpp  dimension_impl.hpp  feature.hpp  feature_impl.hpp  filter_base.hpp  group.hpp  group_impl.hpp  signal_base.hpp  type_traits.hpp  utils.hpp
n-api/: binding.gyp  bindings.cpp  jsdimension.cpp  jsdimension.hpp  jsdimension_feature.cpp  jsdimension_feature_iterable.cpp  jsdimension_feature_sum.cpp  jsfeature.cpp  jsfeature.hpp  jsfeature_order.cpp  jsfeature_order_natural.cpp  jsfilter.cpp  jsfilter.hpp  make_lambda.hpp  utils.cpp  utils.hpp
n-api/lib/: bindings.js
test/: CMakeLists.txt  bitarray_test.cpp  crossfilter_dup.cpp  crossfilter_js_iterables.cpp  crossfilter_js_remove.cpp  crossfilter_js_test.cpp  crossfilter_test.cpp  crossfilter_vector_api.cpp  mtest.cpp
(+34 files in other folders)
